spring-cloud/gateway-service/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
